WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91988
[Qt] [WK2] editing/inserting/typing-tab-designmode tests are failing
https://bugs.webkit.org/show_bug.cgi?id=91988
Summary
[Qt] [WK2] editing/inserting/typing-tab-designmode tests are failing
Caio Marcelo de Oliveira Filho
Reported
2012-07-23 06:32:47 PDT
The TABs are not being added in the result. I didn't investigate it deeply, but it could be a problem with out eventSender.keyDown implementation for WK2.
Attachments
Fix TAB problem setting QKeyEvent keyText value
(3.02 KB, patch)
2012-09-10 14:21 PDT
,
Luciano Wolf
no flags
Details
Formatted Diff
Diff
Updated patch - after Caio's review
(2.95 KB, patch)
2012-09-10 15:00 PDT
,
Luciano Wolf
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Luciano Wolf
Comment 1
2012-09-10 14:21:28 PDT
Created
attachment 163208
[details]
Fix TAB problem setting QKeyEvent keyText value
Caio Marcelo de Oliveira Filho
Comment 2
2012-09-10 14:45:04 PDT
Comment on
attachment 163208
[details]
Fix TAB problem setting QKeyEvent keyText value View in context:
https://bugs.webkit.org/attachment.cgi?id=163208&action=review
Nice fixing that :)
> Tools/ChangeLog:10 > + QKeyEvent must have keyText information. Doing an experiment with QWidget > + and intercepting it's keyPress event it's possible to notice that TAB key > + returns a keyCode (Qt::Key_Tab) + a keyText ("\t").
You can omit your experiment, and add that "Regular key events generated by Qt for the tab key fill both keyCode and keyText, so we should do the same for our fake events."
> Tools/WebKitTestRunner/qt/EventSenderProxyQt.cpp:134 > + keyText = QString("\t");
Should we use QStringLiteral here? :-)
http://woboq.com/blog/qstringliteral.html
Luciano Wolf
Comment 3
2012-09-10 15:00:23 PDT
Created
attachment 163217
[details]
Updated patch - after Caio's review
WebKit Review Bot
Comment 4
2012-09-11 08:12:06 PDT
Comment on
attachment 163217
[details]
Updated patch - after Caio's review Clearing flags on attachment: 163217 Committed
r128189
: <
http://trac.webkit.org/changeset/128189
>
WebKit Review Bot
Comment 5
2012-09-11 08:12:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug