[Qt] [WK2] editing/inserting/typing-tab-designmode tests are failing https://bugs.webkit.org/show_bug.cgi?id=91988

Patch by Luciano Wolf <luciano.wolf@openbossa.org> on 2012-09-11
Reviewed by Kenneth Rohde Christiansen.

Tools:

Regular key events generated by Qt for the tab key fill both
keyCode and keyText, so we should do the same for our fake events.

* WebKitTestRunner/qt/EventSenderProxyQt.cpp:
(WTR::EventSenderProxy::keyDown):

LayoutTests:

Unskip related tests.

* platform/qt-5.0-wk2/Skipped:

Canonical link: https://commits.webkit.org/114282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128189 268f45cc-cd09-0410-ab3c-d52691b4dbfc